# Splash2

./: .gitignore  Arnoldi.cxx  Arnoldi.hxx  Arnoldi2.cxx  ArnoldiTests.cxx  CMakeLists.txt  DB.cxx  DB.hxx  DBTests.cxx  DeviceElement.hxx  HelloSplash.cxx  KRedux.cxx  KRedux.hxx  MVDotTest.cxx  Matrix.hxx  MatrixTests.cxx  README.md  SMatrix.hxx  SparseMatrix.c  SparseMatrix.cxx  SparseMatrix.h  SparseMatrix.hxx  SparseMatrixTests.cxx  Splash.cxx  Splash.hxx  TODO.rst  VecOps.cxx  VecOps.hxx  Vector.hxx  VectorTests.cxx
kernels/: .Elementals.cl.swp  .MatrixOps.cl.swp  Elementals.cl  MVMul.cl  MatrixOps.cl  MatrixVectorMul.cl  Redux.cl  SubspaceOps.cl  VectorOps.cl
